# DiscordGPTChatBot

./: .gitignore  LICENSE  README.md  audioStream.py  beanify.py  chatBot.py  chatRequest.py  confLoader.py  console.py  example_config.yml  frijolito.py  main.py  main.sh  pyproject.toml  queueThread.py  requirements.txt  speech2text.py  text2speech.py
