[tool.poetry]
name = "DiscordGPTChatBot"
version = "2.0.0"
description = "A Python based Discord chat bot that uses the OpenAI GPT API with a custom role"
authors = ["ZeroTwoReallyLovesLollipop <02loveslollipop@boliversal.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
discord = "^2.2.2"
openai = "^0.27.2"
PyYAML = "^6.0"
google.cloud.texttospeech = "^2.14.1"
gTTS = "^2.3.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"